--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Jan 07 18:46:32 UTC 2025
+#Mon Feb 17 17:45:02 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -25,7 +25,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=world
-level-seed=
+level-seed=-4350238317620014805
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
