--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Feb 17 22:52:03 UTC 2025
+#Wed Feb 19 21:30:43 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -25,7 +25,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=world
-level-seed=-4350238317620014805
+level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
